deploy/k8s/00-namespace.yml
# ================================
# Kubernetes Namespace
# ================================
apiVersion: v1
kind: Namespace
metadata:
  name: cloudys
  labels:
    name: cloudys
